# ros_gremsy

./: .gitmodules  CMakeLists.txt  README.md  package.xml
.github/workflows/: main.yml
cfg/: ROSGremsy.cfg
config/: config.yaml
gremsy_base/: CMakeLists.txt  package.xml
gremsy_base/cfg/: ROSGremsy.cfg
gremsy_base/config/: config.yaml
gremsy_base/include/gremsy_base/: ros_gremsy.h
gremsy_base/src/: ros_gremsy.cpp
gremsy_bringup/: CMakeLists.txt  package.xml
gremsy_bringup/launch/: gimbal.launch
include/ros_gremsy/: ros_gremsy.h
launch/: gimbal.launch
src/: ros_gremsy.cpp
