<?xml version="1.0"?>
<package format="2">
  <name>ros_gremsy</name>
  <version>0.0.1</version>
  <description>The ros_gremsy package</description>

  <maintainer email="7vahl@informatik.uni-hamurg.de">Florian Vahl</maintainer>

  <author email="7vahl@informatik.uni-hamurg.de">Florian Vahl</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>bitbots_docs</depend>
</package>
