<?xml version="1.0"?>
<package format="2">
  <name>gremsy_base</name>
  <version>0.0.1</version>
  <description>The core of the ros_gremsy package</description>

  <maintainer email="ivangr3@gmail.com">Ivan Gutierrez</maintainer>

  <author email="7vahl@informatik.uni-hamurg.de">Florian Vahl</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen</depend>
  <depend>tf2_geometry_msgs</depend>
</package>
