<?xml version="1.0"?>
<package format="2">
  <name>gremsy_bringup</name>
  <version>0.0.1</version>
  <description>The home the gimal launch files </description>

  <maintainer email="7vahl@informatik.uni-hamurg.de">Florian Vahl</maintainer>

  <author email="7vahl@informatik.uni-hamurg.de">Florian Vahl</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gremsy_base</depend>
</package>
